// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with aria-modal 1`] = `
<ModalContainer
  aria-modal={false}
>
  <div
    aria-modal={false}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrow 1`] = `
<ModalContainer
  showArrow={true}
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  >
    <div
      className="md-modal-container-arrow-wrapper"
      data-popper-arrow={true}
      id="arrow"
    >
      <ModalArrow
        color="primary"
      >
        <svg
          className="md-modal-arrow-svg"
          data-placement="auto"
          height={24}
          viewBox="0 0 12 24"
          width={12}
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clipPath
              id="modal-arrow-cut-stroke-auto"
            >
              <path
                d="m  l  q   l "
              />
            </clipPath>
          </defs>
          <path
            clipPath="url(#modal-arrow-cut-stroke-auto)"
            d="m  l  q   l "
            data-color="primary"
          />
        </svg>
      </ModalArrow>
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrowId 1`] = `
<ModalContainer
  arrowId="example-id"
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  >
    <div>
      Example Text
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  className="example-class"
>
  <div
    aria-modal={true}
    className="example-class md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  color="quaternary"
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="quaternary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with elevation 1`] = `
<ModalContainer
  elevation={8}
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={8}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  id="example-id"
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    id="example-id"
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  isPadded={true}
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={true}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with radius 1`] = `
<ModalContainer
  round={150}
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={150}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with role 1`] = `
<ModalContainer
  role="dialog"
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ModalContainer>
`;
